Fix layout issue for bioblitz

--- a/src/scss/layout/_manifest.scss
+++ b/src/scss/layout/_manifest.scss
@@ -18,7 +18,7 @@
 }
 
 .full-width {
-  @media(min-width: $break-lg) {
+  @media(min-width: $break-md) {
     margin-left: $nav-width;
   }
 }
